--- a/Passwords-Encryption-Style.css
+++ b/Passwords-Encryption-Style.css
@@ -99,9 +99,26 @@ footer
 	margin: 5px 0px;
 }
 
-ul p
-{
-	font-size: 0.75rem;
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+table{
+	width: 70vw;
+	align-self: center;
+}
+
+th {
+	text-align: center;
+	background: rgba(240, 15, 52, 0.5);
+	font-size: 1.5rem;
+	padding: 0.4em 0em;
+}
+
+td {
+	padding: 10px 30px;
+	background: rgba(240, 15, 52, 0.1);
 }
 
 /* La navbar */
@@ -294,10 +311,18 @@ main h1
 {
 	width: 30%;
 	flex: 1;
+	padding: 2em 5em;
 }
 #explicacionPassDiv
 {
-	width: 30vw;
+	background-color: indigo;
+	background-image: url("ejemploPassword.jpg");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	background-position: center;
+	width: 22vw;
+	height: 75vh;
+	align-self: center;
 }
 /* Encriptación */
 #encryptionSection
@@ -309,28 +334,25 @@ main h1
 	background-color: #BCBDE3;
 	
 	width: 30%;
-	height: 50vh;
+	min-height: 50vh;
 	margin: 20px 0px;
-	padding: 20px 30px;
+	padding: 20px 60px;
 	flex: 1;
 }
 .explicacionEncrDiv
 {
 	background-color: indigo;
 	width: 22vw;
-	height: 50vh;
+	min-height: 50vh;
 	align-self: center;
 }
 #cifradosSustImg
 {
+	background-color: indigo;
 	background-image: url("ejemplosSustitucion.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 100% 100%;
-}
-#cifradoTransDiv
-{
-	height: 50vh;
 }
 #cifradosTransImg
 {
@@ -362,6 +384,5 @@ main h1
 }
 .footerDiv
 {
-	margin: 0em 1.5em;
-	/* flex: 1; */
+	margin: 1em 1.5em;
 }
