--- a/Passwords-Encryption-Style.css
+++ b/Passwords-Encryption-Style.css
@@ -266,12 +266,14 @@ main h1
 }
 #obligacionesDiv
 {
+	background-color: #BC9DE0;
 	margin: 20px 10px;
 	width: 40%;
 	flex: 1;
 }
 #derechosDiv
 {
+	background-color: #BC9DE0;
 	margin: 20px 10px;
 	width: 25%;
 }
@@ -293,11 +295,13 @@ main h1
 }
 #datosPersonalesDiv
 {
+	background-color: #BC9DE0;
 	width: 40%;
 	margin: 20px 10px;
 }
 #datosNoPersonalesDiv
 {
+	background-color: #BC9DE0;
 	margin: 20px 10px;
 	width: 40%;
 	flex: 1;
@@ -331,7 +335,7 @@ main h1
 }
 .cifradosFuncionamiento
 {
-	background-color: #BCBDE3;
+	background-color: #F5D694;
 	
 	width: 30%;
 	min-height: 50vh;
@@ -386,3 +390,6 @@ main h1
 {
 	margin: 1em 1.5em;
 }
+
+/* Celular */
+
