--- a/Passwords-Encryption-Style.css
+++ b/Passwords-Encryption-Style.css
@@ -99,6 +99,11 @@ footer
 	margin: 5px 0px;
 }
 
+#passwordListDiv p
+	{
+		font-size: 0.9rem;
+	}
+
 table, th, td {
 	border: 1px solid black;
 	border-collapse: collapse;
@@ -249,16 +254,6 @@ main h1
 {
 	background-image: linear-gradient(#12001E, #EEE5F3, #EEE5F3, #EEE5F3, white, white, white, white, white, white, white);
 }
-#imgIntro
-{
-	background-color: indigo;
-	background-image: url("IntroImagen.jpg");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	background-position: center;
-	height: 400px;
-	align-self: center;
-}
 /* Datos */
 #dataSection
 {
@@ -280,18 +275,15 @@ main h1
 #definicionDatosDiv
 {
 	width: 70%;
+	min-width: 716px;
 	flex: 1;
 }
 #datosPersonalesImg
 {
-	background-color: indigo;
-	background-image: url("datosPersonalesImagen.png");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	background-position: center;
 	width: 22vw;
 	height: 45vh;
 	align-self: center;
+	align-content: center;
 }
 #datosPersonalesDiv
 {
@@ -314,8 +306,9 @@ main h1
 #passwordListDiv
 {
 	width: 30%;
+	max-height: 75vh;
 	flex: 1;
-	padding: 2em 5em;
+	padding: 2.5em 5em;
 }
 #explicacionPassDiv
 {
@@ -360,6 +353,7 @@ main h1
 }
 #cifradosTransImg
 {
+	background-color: indigo;
 	background-image: url("ejemplosTransposicion.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -367,6 +361,7 @@ main h1
 }
 #cifradosAlgNumImg
 {
+	background-color: indigo;
 	background-image: url("ejemploAlgoritmoNumerico.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -393,3 +388,122 @@ main h1
 
 /* Celular */
 
+@media (max-width: 1309px)
+{
+	body{
+		font-size: 0.85rem;
+	}
+	
+	h1{
+		font-size: 1.85rem;
+	}
+	
+	h2{
+		font-size: 1.35rem;
+	}
+	
+	h3{
+		font-size: 1rem;
+	}
+	
+	#tituloh3{
+		font-size: 1.17rem;
+	}
+}
+
+@media (max-width: 1224px)
+{
+	body{
+		font-size: 0.75rem;
+	}
+	
+	h1{
+		font-size: 1.75rem;
+	}
+	
+	h2{
+		font-size: 1.25rem;
+	}
+	
+	h3{
+		font-size: 1rem;
+	}
+	
+	section {
+		width: 100%;
+	}
+	
+	#datosPersonalesImg{
+		width: 50vw;
+		
+	}
+}
+
+@media (max-width: 1024px)
+{
+	body{
+		font-size: 0.75rem;
+	}
+	
+	h1{
+		font-size: 1.75rem;
+	}
+	
+	h2{
+		font-size: 1.25rem;
+	}
+	
+	h3{
+		font-size: 1rem;
+	}
+	
+	section {
+		width: 100%;
+	}
+	
+	#datosPersonalesImg{
+		width: 50vw;
+	}
+}
+
+@media (max-width: 640px)
+{
+	body{
+		font-size: 0.75rem;
+	}
+	
+	h1{
+		font-size: 1.75rem;
+	}
+	
+	h2{
+		font-size: 1.25rem;
+	}
+	
+	h3{
+		font-size: 1rem;
+	}
+	#passwordListDiv p
+	{
+		display: none;
+	}
+}
+
+@media (max-width: 475px)
+{
+	body{
+		font-size: 0.75rem;
+	}
+	
+	h1{
+		font-size: 1.75rem;
+	}
+	
+	h2{
+		font-size: 1.25rem;
+	}
+	
+	h3{
+		font-size: 1rem;
+	}
+}
