--- a/Passwords-Encryption-Style.css
+++ b/Passwords-Encryption-Style.css
@@ -59,11 +59,19 @@ footer
 	padding: 5em 5em;
 }
 
+.parentDiv
+{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 .parentDiv-Space_Evenly
 {
 	display: flex;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
+	margin: 20px 0px;
 }
 
 .parentDiv-Flex_Start
@@ -264,6 +272,7 @@ main h1
 	background-color: #BC9DE0;
 	margin: 20px 10px;
 	width: 40%;
+	min-width: 750px;
 	flex: 1;
 }
 #derechosDiv
@@ -271,6 +280,8 @@ main h1
 	background-color: #BC9DE0;
 	margin: 20px 10px;
 	width: 25%;
+	max-width: 345px;
+	flex: 1;
 }
 #definicionDatosDiv
 {
@@ -280,8 +291,8 @@ main h1
 }
 #datosPersonalesImg
 {
-	width: 22vw;
-	height: 45vh;
+	width: 420px;
+	height: 450px;
 	align-self: center;
 	align-content: center;
 }
@@ -305,21 +316,17 @@ main h1
 }
 #passwordListDiv
 {
+	background-color: #E8EAFA;
 	width: 30%;
 	max-height: 75vh;
 	flex: 1;
-	padding: 2.5em 5em;
+	padding: 4em 5em;
 }
 #explicacionPassDiv
 {
-	background-color: indigo;
-	background-image: url("ejemploPassword.jpg");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	background-position: center;
-	width: 22vw;
-	height: 75vh;
+	width: 400px;
 	align-self: center;
+	align-content: center;
 }
 /* Encriptación */
 #encryptionSection
@@ -331,41 +338,17 @@ main h1
 	background-color: #F5D694;
 	
 	width: 30%;
-	min-height: 50vh;
-	margin: 20px 0px;
+	min-height: 51vh;
+	max-height: 500px;
+	margin: 0px;
 	padding: 20px 60px;
 	flex: 1;
 }
 .explicacionEncrDiv
 {
-	background-color: indigo;
-	width: 22vw;
-	min-height: 50vh;
+	width: 400px;
 	align-self: center;
-}
-#cifradosSustImg
-{
-	background-color: indigo;
-	background-image: url("ejemplosSustitucion.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 100% 100%;
-}
-#cifradosTransImg
-{
-	background-color: indigo;
-	background-image: url("ejemplosTransposicion.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 100% 100%;
-}
-#cifradosAlgNumImg
-{
-	background-color: indigo;
-	background-image: url("ejemploAlgoritmoNumerico.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 100% 100%;
+	align-content: center;
 }
 /* Fin de cifrado */
 #outroSection
@@ -376,8 +359,8 @@ main h1
 #footerImgDiv
 {
 	margin: 0em 1.5em;
-	width: 7%;
-	height: 7X;
+	width: 50px;
+	height: 50px;
 	align-self: center;
 	margin-left: 2em;
 }
@@ -386,102 +369,70 @@ main h1
 	margin: 1em 1.5em;
 }
 
-/* Celular */
+/* Me when the responsive is code */
 
-@media (max-width: 1309px)
-{
-	body{
-		font-size: 0.85rem;
-	}
+@media (max-width: 980px){
 	
-	h1{
-		font-size: 1.85rem;
-	}
-	
-	h2{
-		font-size: 1.35rem;
-	}
-	
-	h3{
-		font-size: 1rem;
-	}
-	
-	#tituloh3{
-		font-size: 1.17rem;
-	}
 }
 
-@media (max-width: 1224px)
-{
+@media (max-width: 1024px){
+	
+}
+
+@media (max-width: 768px){
 	body{
 		font-size: 0.75rem;
-	}
-	
-	h1{
-		font-size: 1.75rem;
-	}
-	
-	h2{
-		font-size: 1.25rem;
-	}
-	
-	h3{
-		font-size: 1rem;
-	}
-	
-	section {
 		width: 100%;
 	}
-	
-	#datosPersonalesImg{
-		width: 50vw;
-		
-	}
-}
-
-@media (max-width: 1024px)
-{
-	body{
-		font-size: 0.75rem;
-	}
-	
 	h1{
 		font-size: 1.75rem;
 	}
-	
 	h2{
 		font-size: 1.25rem;
 	}
-	
 	h3{
 		font-size: 1rem;
 	}
-	
-	section {
-		width: 100%;
+	/* navbar */
+	#headerMain{
+		height: 120px;
 	}
-	
-	#datosPersonalesImg{
-		width: 50vw;
+	#headerMain-logo{
+		height: 100%;
+		padding-left: 20px;
 	}
-}
+	#headerMain-nav{
+		width: 440px;
+		padding-right: 60px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	#headerMain-nav ul li{
+		display: inline;
+		float: left;
+		margin-left: 30px;
+	}
 
-@media (max-width: 640px)
-{
-	body{
-		font-size: 0.75rem;
+	#headerMain-nav ul li a{
+		height: 100%;
+		padding: 0 10px;
+		line-height: 60px;
+		font-size: 1.5rem;
 	}
-	
-	h1{
-		font-size: 1.75rem;
+	/* Datos */
+	#obligacionesDiv{
+		margin: 20px 10px;
+		width: 40%;
+		min-width: 400px;
+		max-width: 532px;
+		flex: 1;
 	}
-	
-	h2{
-		font-size: 1.25rem;
-	}
-	
-	h3{
-		font-size: 1rem;
+	#derechosDiv{
+		background-color: #BC9DE0;
+		margin: 20px 10px;
+		width: 25%;
+		max-width: 532px;
+		flex: 1;
 	}
 	#passwordListDiv p
 	{
@@ -489,10 +440,18 @@ main h1
 	}
 }
 
-@media (max-width: 475px)
-{
+@media (max-width: 425px){
+	.resumible{
+		display: none;
+	}
 	body{
 		font-size: 0.75rem;
+	}
+	
+	section{
+		width: 100%;
+		margin: 0%;
+		padding: 40px 10px;
 	}
 	
 	h1{
@@ -500,10 +459,83 @@ main h1
 	}
 	
 	h2{
-		font-size: 1.25rem;
+		font-size: 1rem;
 	}
 	
 	h3{
-		font-size: 1rem;
+		font-size: 0.9rem;
+	}
+	/* navbar */
+	#headerMain{
+		height: 80px;
+	}
+	#headerMain-logo{
+		padding-left: 10px;
+	}
+	#headerMain-logo img{
+		display: none;
+	}
+	#headerMain-nav{
+		width: 340px;
+		padding: 0px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	#headerMain-nav ul{
+		display: inline;
+		float: left;
+		max-width: 250px;
+	}
+	#headerMain-nav ul li a{
+		padding: 0 5px;
+		line-height: 40px;
+		font-size: 0.8rem;
+	}
+	#headerMain-name h3{
+		display: none;
+	}
+	#headerMain-name{
+		padding: 0px;
+		margin-right: 10px;
+	}
+	#headerMain-name img{
+		margin-right: 20px;
+	}
+	#tituloh3{
+		display: none;
+	}
+	/* navbar fin */
+	main{
+		height: 30vh;
+		background-size: 50vh, 100% 100%;
+	}
+	main h1{
+		padding: 0.1em;
+	}
+	#obligacionesDiv{
+		margin: 0px 10px;
+		min-width: 385px;
+		flex: 1;
+	}
+	#derechosDiv{
+		margin: 20px 10px;
+		flex: 1;
+	}
+	#definicionDatosDiv{
+		min-width: 316px;
+		margin-bottom: 10px;
+		flex: 1;
+	}
+	#datosPersonalesDiv{
+		margin: 20px 10px;
+		flex: 1;
+	}
+	#datosNoPersonalesDiv{
+		margin: 0px 10px;
+		min-width: 385px;
+		flex: 1;
+	}
+	.explicacionEncrDiv{
+		margin: 10px 0px;;
 	}
 }
