--- a/Passwords-Encryption-Style.css
+++ b/Passwords-Encryption-Style.css
@@ -108,9 +108,9 @@ footer
 }
 
 #passwordListDiv p
-	{
-		font-size: 0.9rem;
-	}
+{
+	font-size: 0.9rem;
+}
 
 table, th, td {
 	border: 1px solid black;
@@ -338,7 +338,7 @@ main h1
 	background-color: #F5D694;
 	
 	width: 30%;
-	min-height: 51vh;
+	min-height: 300px;
 	max-height: 500px;
 	margin: 0px;
 	padding: 20px 60px;
@@ -371,18 +371,19 @@ main h1
 
 /* Me when the responsive is code */
 
-@media (max-width: 980px){
-	
+@media (max-width: 1440px){
+	#passwordListDiv{
+		padding: 2em;
+	}
+	#passwordListDiv p
+	{
+		font-size: 0.8rem;
+	}
 }
 
 @media (max-width: 1024px){
-	
-}
-
-@media (max-width: 768px){
-	body{
-		font-size: 0.75rem;
-		width: 100%;
+	.resumible{
+		display: none;
 	}
 	h1{
 		font-size: 1.75rem;
@@ -393,50 +394,94 @@ main h1
 	h3{
 		font-size: 1rem;
 	}
+	p{
+		font-size: 0.8rem;
+	}
+	td{
+		font-size: 0.8rem;
+	}
+	li{
+		font-size: 0.8rem;
+	}
+	#definicionDatosDiv{
+		min-width: 385px;
+		margin-bottom: 30px;
+	}
+	#passwordListDiv p
+	{
+		padding-top: 3em;
+	}
+}
+
+@media (max-width: 768px){
+	section{
+		padding: 40px 60px;
+	}
 	/* navbar */
 	#headerMain{
 		height: 120px;
 	}
 	#headerMain-logo{
-		height: 100%;
 		padding-left: 20px;
 	}
 	#headerMain-nav{
-		width: 440px;
-		padding-right: 60px;
+		width: 400px;
+		padding-right: 20px;
 		display: flex;
 		flex-wrap: wrap;
 	}
 	#headerMain-nav ul li{
-		display: inline;
-		float: left;
 		margin-left: 30px;
 	}
-
 	#headerMain-nav ul li a{
-		height: 100%;
-		padding: 0 10px;
-		line-height: 60px;
-		font-size: 1.5rem;
+		font-size: 1.2rem;
 	}
-	/* Datos */
+	#headerMain-name{
+		padding-right: 20px;
+		line-height: 120px;
+	}
+	#headerMain-name h3{
+		font-size: 1.1rem;
+	}
+	/* Fin navbar */
+	main{
+		height: 35vh;
+		background-size: 65vh, 100% 100%;
+	}
+	main h1{
+		padding: 0.1em 0em;
+	}
+	/* Fin main */
 	#obligacionesDiv{
-		margin: 20px 10px;
-		width: 40%;
-		min-width: 400px;
-		max-width: 532px;
-		flex: 1;
+		margin: 0px 10px;
+		min-width: 385px;
 	}
 	#derechosDiv{
-		background-color: #BC9DE0;
 		margin: 20px 10px;
-		width: 25%;
-		max-width: 532px;
-		flex: 1;
+		min-width: 385px;
 	}
-	#passwordListDiv p
-	{
+	#datosPersonalesDiv{
+		min-width: 385px;
+	}
+	#datosNoPersonalesDiv{
+		margin: 0px 10px;
+		min-width: 385px;
+	}
+	#passwordListDiv{
+		padding-top: 20px;
+		min-width: 385px;
+	}
+	#passwordListDiv p{
 		display: none;
+	}
+	.cifradosFuncionamiento{
+		min-height: 100px;
+		min-width: 385px;
+		height: fit-content;
+		padding-bottom: 30px;
+	}
+	.explicacionEncrDiv{
+		margin: 10px 0px;;
 	}
 }
 
@@ -444,24 +489,14 @@ main h1
 	.resumible{
 		display: none;
 	}
-	body{
-		font-size: 0.75rem;
-	}
-	
 	section{
 		width: 100%;
 		margin: 0%;
 		padding: 40px 10px;
 	}
-	
-	h1{
-		font-size: 1.75rem;
-	}
-	
 	h2{
 		font-size: 1rem;
 	}
-	
 	h3{
 		font-size: 0.9rem;
 	}
@@ -478,12 +513,8 @@ main h1
 	#headerMain-nav{
 		width: 340px;
 		padding: 0px;
-		display: flex;
-		flex-wrap: wrap;
 	}
 	#headerMain-nav ul{
-		display: inline;
-		float: left;
 		max-width: 250px;
 	}
 	#headerMain-nav ul li a{
@@ -514,28 +545,174 @@ main h1
 	}
 	#obligacionesDiv{
 		margin: 0px 10px;
-		min-width: 385px;
+		min-width: 355px;
+		max-width: 385px;
 		flex: 1;
 	}
 	#derechosDiv{
 		margin: 20px 10px;
+		min-width: 355px;
+		max-width: 385px;
 		flex: 1;
 	}
 	#definicionDatosDiv{
 		min-width: 316px;
+		max-width: 355px;
 		margin-bottom: 10px;
-		flex: 1;
 	}
 	#datosPersonalesDiv{
 		margin: 20px 10px;
+		min-width: 355px;
+		max-width: 385px;
 		flex: 1;
 	}
 	#datosNoPersonalesDiv{
 		margin: 0px 10px;
-		min-width: 385px;
+		min-width: 355px;
+		max-width: 385px;
 		flex: 1;
 	}
 	.explicacionEncrDiv{
 		margin: 10px 0px;;
+	}
+}
+
+@media (max-width: 375px){
+	section{
+		padding: 20px 10px;
+	}
+	
+	h1{
+		font-size: 1.4rem;
+	}
+	
+	h2{
+		font-size: 1rem;
+	}
+	
+	h3{
+		font-size: 0.9rem;
+	}
+	th{
+		font-size: 1rem;
+	}
+	td{
+		padding: 10px 20px;
+	}
+	/* navbar */
+	#headerMain-nav{
+		width: 270px;
+	}
+	/* navbar fin */
+	main{
+		height: 25vh;
+		background-size: 45vh, 100% 100%;
+	}
+	main h1{
+		font-size: 3rem;
+		padding: 0.1em;
+	}
+	#obligacionesDiv{
+		margin: 0px 10px;
+		min-width: 290px;
+		max-width: 300px;
+	}
+	#derechosDiv{
+		margin: 20px 10px;
+		min-width: 290px;
+		max-width: 300px;
+	}
+	#definicionDatosDiv{
+		min-width: 290px;
+		max-width: 300px;
+		margin-bottom: 10px;
+	}
+	#datosPersonalesDiv{
+		margin: 20px 10px;
+		min-width: 290px;
+		max-width: 300px;
+	}
+	#datosNoPersonalesDiv{
+		margin: 0px 10px;
+		min-width: 290px;
+		max-width: 300px;
+	}
+	#passwordListDiv{
+		padding-top: 20px;
+		min-width: 300px;
+	}
+	.cifradosFuncionamiento{
+		min-width: 300px;
+	}
+	.explicacionEncrDiv{
+		margin: 10px 0px;;
+	}
+}
+
+@media (max-width: 320px){
+	section{
+		padding: 10px 5px;
+	}
+	h1{
+		font-size: 1.4rem;
+	}
+	
+	h2{
+		font-size: 1rem;
+	}
+	
+	h3{
+		font-size: 0.9rem;
+	}
+	/* navbar */
+	#headerMain-nav{
+		width: 250px;
+	}
+	#headerMain-logo img{
+		size: 0px;
+	}
+	#headerMain-nav ul{
+		width: 240px;
+	}
+	/* navbar fin */
+	main{
+		height: 20vh;
+		background-size: 35vh, 100% 100%;
+	}
+	main h1{
+		font-size: 2.6rem;
+	}
+	#h2Rebelde{
+		font-size: 1.5rem;
+	}
+	#obligacionesDiv{
+		min-width: 200px;
+		max-width: 300px;
+	}
+	#derechosDiv{
+		min-width: 200px;
+		max-width: 300px;
+	}
+	#definicionDatosDiv{
+		min-width: 200px;
+		max-width: 300px;
+	}
+	#datosPersonalesDiv{
+		min-width: 200px;
+		max-width: 300px;
+	}
+	#datosNoPersonalesDiv{
+		min-width: 200px;
+		max-width: 300px;
+	}
+	table{
+		min-width: 200px;
+		max-width: 300px;
+	}
+	#passwordListDiv{
+		min-width: 200px;
+	}
+	.cifradosFuncionamiento{
+		min-width: 200px;
 	}
 }
