--- a/Passwords-Encryption-Style.css
+++ b/Passwords-Encryption-Style.css
@@ -318,7 +318,7 @@ main h1
 {
 	background-color: #E8EAFA;
 	width: 30%;
-	max-height: 75vh;
+	max-height: fit-content;
 	flex: 1;
 	padding: 4em 5em;
 }
@@ -377,6 +377,24 @@ main h1
 	}
 	#passwordListDiv p
 	{
+		font-size: 0.8rem;
+	}
+}
+
+@media (max-width: 1391px){
+	.cifradosFuncionamiento .resumible{
+		font-size: 0.8rem;
+	}
+}
+
+@media (max-width: 1270px){
+	.resumible{
+		display: none;
+	}
+}
+
+@media (max-width: 1100px){
+	.cifradosFuncionamiento{
 		font-size: 0.8rem;
 	}
 }
